WIP trying to fit text on the job title.

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,12 @@ td { vertical-align: top; }
   line-height: 0.7em;
 }
 
+.job-title {
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  margin-left: 10px;
+}
+
 
 
 
