--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,34 @@ body {
     margin-left: 6px;
   }
 
+  .abilities ul {
+    position: relative;
+    height: 30em;
+  }
+
+  .abilities ul li {
+    display: inline-block;
+    width: 7em;
+    height: 7em;
+    position: absolute;
+    text-align: center;
+  }
+
+  .abilities ul li.rubiks-cube {
+    left: 5%;
+    top: 10%;
+  }
+
+  .abilities ul li.guitar {
+    right: 5%;
+    top: 20%;
+  }
+
+  .abilities ul li.human-jukebox {
+    left: 15%;
+    bottom: 5%;
+  }
+
 }
 
 @media only screen and (min-width: 48em) {
@@ -248,6 +276,14 @@ body {
 
   .container .given-name {
     margin-left: 7px;
+  }
+
+  .abilities ul {
+    height: 35em;
+  }
+
+  .abilities ul li {
+    font-size: 1.2em;
   }
 
 }
