--- a/css/style.css
+++ b/css/style.css
@@ -231,21 +231,68 @@ body {
     height: 7em;
     position: absolute;
     text-align: center;
+    border: none;
+  }
+
+  .abilities ul li .square, .abilities ul li .caption {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
+  .abilities ul li .square2 {
+    -ms-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .abilities ul li .square3 {
+    -ms-transform: rotate(22.5deg);
+    -moz-transform: rotate(22.5deg);
+    -webkit-transform: rotate(22.5deg);
+    -o-transform: rotate(22.5deg);
+    transform: rotate(22.5deg);
+  }
+
+  .abilities ul li .square4 {
+    -ms-transform: rotate(67.5deg);
+    -moz-transform: rotate(67.5deg);
+    -webkit-transform: rotate(67.5deg);
+    -o-transform: rotate(67.5deg);
+    transform: rotate(67.5deg);
   }
 
   .abilities ul li.rubiks-cube {
     left: 5%;
     top: 10%;
+    background-color: transparent;
+  }
+
+  .abilities ul li.rubiks-cube .caption {
+    margin-top: 2em;
+    -ms-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -webkit-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+    transform: rotate(-5deg);
+  }
+
+  .abilities ul li.rubiks-cube .square {
+    background-color: #56FD5F;
   }
 
   .abilities ul li.guitar {
     right: 5%;
     top: 20%;
+    background-color: transparent;
   }
 
   .abilities ul li.human-jukebox {
     left: 15%;
     bottom: 5%;
+    background-color: transparent;
   }
 
 }
