--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
 .container {
   max-width: 420px;
   padding: 0 10px;
-  margin: 0 auto;
+  margin: 0 auto 2em auto;
 }
 
 .vcard {
@@ -174,6 +174,7 @@ body {
 
   .container {
     max-width: 600px;
+    margin-bottom: 3em;
   }
 
   .container h1 {
@@ -190,6 +191,7 @@ body {
 
   .container {
     max-width: 730px;
+    margin-bottom: 4em;
   }
 
   .vcard {
